--- a/helloworld/src/main/resources/application.yaml
+++ b/helloworld/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: helloworld
   datasource:
-    url: jdbc:postgresql://localhost:5432/ecommarce
+    url: jdbc:postgresql://localhost:5432/ecom
     username: postgres
     password: 123
     driver-class-name: org.postgresql.Driver
